  screen real estate for the screenshots.
- Some functionality has been rearranged to be utilized by menus. Namely,
  the "Enable Sending Keystrokes" checkbox and the "Refresh Screenshot
  Immediately" button have been moved to a Screenshot menu. Again, this is
  to declutter the GUI/provide real estate for screenshots. Also, a Logs
  menu has been added with associated functions.

Version 0.12
------------
- Added Public Chat tab to the Chat tab that contains only
  chat from the public channels (i.e. General/Trade).
- Added ability to parse Glider chat and combat log files.
  Accessed via File->Parse Log File. After you select a file
  from the file chooser, it will automatically select Chat or
  Combat as the log type if the file name contains the word 
  Chat or Combat. If the log file is named something else,
  you will need to manually select the correct type. Note 
  that the timestamps are only accurate to the minute, since
  this is how they are stored when Glider makes the log files.
  Also, the estimated gold/hour on the loot tab wil not be
  accurate since that is calculated in realtime.
- Moved the Load Profiles section into its own tab.
- Made the Configuration dialog more consistent.
- Completely revamped the web server. Added an update
  interval option on the Web tab in the Confiuration dialog.
  Additionally, I have merged my PHP based monitor (now PHPGlideMon)
  with this project.

Version 0.11
------------
- Added an embedded webserver. It is disabled by default. See
  the Web tab in the configuration dialog to enable it. The
  default port is 3201; visit http://localhost:3201 to view it.
  You will need to forward this port if you are behind a router
  in order to view it from a remote location. Note that this is
  still in a very early stage and is not the highest priority
  feature. For now it's read-only and shows your status. It is
  based on my original PHP-based monitor, which others have
  improved upon.